# trashure

./: .env.example  .gitignore  README.md  bigPicture.md  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/deals/[id]/prepare-settlement/: route.ts
app/api/deals/[id]/settle/: route.ts
app/api/items/: route.ts
app/api/items/[id]/enrich/: route.ts
app/api/items/search/: route.ts
app/api/offers/: route.ts
app/api/offers/[id]/agent-negotiate/: route.ts
app/api/offers/[id]/respond/: route.ts
programs/: Cargo.toml
programs/trashure_escrow/: Anchor.toml  Cargo.toml
programs/trashure_escrow/src/: lib.rs
src/components/: search-panel.tsx  seller-form.tsx
src/lib/: ai.ts  deals.ts  env.ts  http.ts  pricing.ts  solana.ts  supabase-admin.ts  types.ts
supabase/migrations/: 202604220001_init.sql
