[package]
name = "trashure_escrow"
version = "0.1.0"
description = "Trashure escrow and fee split program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trashure_escrow"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
