[package]
name = "trashure_escrow"
version = "0.1.0"
description = "Trashure escrow and fee split program"
edition = "2021"

[profile.release]
overflow-checks = true

[lib]
crate-type = ["cdylib", "lib"]
name = "trashure_escrow"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
